tests/sources/invalid/arrays/array_method_call_errors.fire
// Array/string method-call errors: mutation methods on fixed-size arrays,
// wrong arg counts, wrong element types, and unknown methods.

import @firescript/std.io.println;

nums: int32[3] = [1, 2, 3];

// Arrays are fixed-size: these mutation methods are not supported
nums.append(4);  //~ ERROR FS-SEM-0010 @6
nums.insert(0, 9);  //~ ERROR FS-SEM-0010 @6
nums.pop();  //~ ERROR FS-SEM-0010 @6
nums.clear();  //~ ERROR FS-SEM-0010 @6

// length/size take no arguments
badLen: int32 = nums.length(1);  //~ ERROR FS-SEM-0010 @22

// index/count expect exactly one argument of the element type
badIndexArgs: int32 = nums.index();  //~ ERROR FS-SEM-0010 @28
badIndexType: int32 = nums.index("two");  //~ ERROR FS-SEM-0010 @34
badCountArgs: int32 = nums.count(1, 2);  //~ ERROR FS-SEM-0010 @28

// Unknown array method
nums.frobnicate();  //~ ERROR FS-SEM-0010 @6

// String methods: length takes no arguments; unknown methods are rejected
s: string = "hello";
badStrLen: int32 = s.length(1);  //~ ERROR FS-SEM-0010 @22
s.frobnicate();  //~ ERROR FS-SEM-0010 @3
